--- a/exercises/Supplement3/.devcontainer/devcontainer.json
+++ b/exercises/Supplement3/.devcontainer/devcontainer.json
@@ -2,8 +2,12 @@
 // README at: https://github.com/devcontainers/templates/tree/main/src/ubuntu
 {
 	"name": "Ubuntu",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/base:dev-ubuntu-24.04",
 	// Relax security restrictions to allow setarch -R and ptrace for the purposes of the exercise
-	"runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ]
+	"runArgs": [
+		"--cap-add=SYS_PTRACE",
+		"--security-opt",
+		"seccomp=unconfined"
+	],
+	"postCreateCommand": "sudo apt-get update && sudo apt-get -y install gdb"
 }
